# antartia

./: .env.example  .gitignore  ASSIGNMENT.md  CLAUDE.md  Mission.md  README.md  backend_data.md  issues.md  json.md  new_json.md  plan.md  plan_fase2.md  pyproject.toml  requirements.txt  run_evals.py  start_agent.sh  test_plan.md
configs/: clinic_appointments_config.json  example_config.json  expedition_config.json  pizza_place_config.json  travel_agency_config.json
data/: expedition.db
data/evals/datasets/: golden_dataset.csv
docs/: PLAN.md  actions.md  class_diagram.md  presentation.html
eval/: prompts.py  reporter.py  runner.py
session_states/: example_state.json
src/agent/: __main__.py
src/agent/cli/: __init__.py  app.py
src/agent/config/: __init__.py  loader.py
src/agent/db/: activity_logs_repo.py  database.py  knowledge_docs_repo.py  locations_repo.py  messages_repo.py  photos_repo.py  reflections_repo.py  sync_queue_repo.py  tasks_repo.py  weather_repo.py
src/agent/http/: server.py
src/agent/llm/: __init__.py  client.py  ollama.py  ollama_vision.py  openrouter.py  prompt_builder.py
src/agent/models/: __init__.py  actions.py  location.py  photo.py  state.py  task.py
src/agent/runtime/: __init__.py  parser.py  protocols.py  runtime.py  scheduler.py  semaphore.py  task_runner.py
src/agent/services/: distance_service.py  (+5 more)
tests/: test_cli.py  test_file_store.py  test_openrouter.py  test_parser.py  test_prompt_builder.py  test_runtime.py  test_state_store.py
tools/: heic_to_jpg.py  refresh_sessions.py  session_debugger.html
(+3 files in other folders)
